Помещение наработок дли реализации палитры формы.

--- a/FormCodeGenerator/src/ExternalDataProcessors/FormGenerator/Forms/ФормаКодогенерации/Form.form
+++ b/FormCodeGenerator/src/ExternalDataProcessors/FormGenerator/Forms/ФормаКодогенерации/Form.form
@@ -2689,6 +2689,37 @@
         <items xsi:type="form:FormGroup">
           <name>ГруппаСтраницаНастройки</name>
           <id>217</id>
+          <items xsi:type="form:Button">
+            <name>ОбновитьИзПалитры</name>
+            <id>232</id>
+            <visible>true</visible>
+            <enabled>true</enabled>
+            <userVisible>
+              <common>true</common>
+            </userVisible>
+            <extendedTooltip>
+              <name>ОбновитьИзПалитрыРасширеннаяПодсказка</name>
+              <id>233</id>
+              <visible>true</visible>
+              <enabled>true</enabled>
+              <userVisible>
+                <common>true</common>
+              </userVisible>
+              <type>Label</type>
+              <autoMaxWidth>true</autoMaxWidth>
+              <autoMaxHeight>true</autoMaxHeight>
+              <extInfo xsi:type="form:LabelDecorationExtInfo">
+                <horizontalAlign>Left</horizontalAlign>
+              </extInfo>
+            </extendedTooltip>
+            <type>UsualButton</type>
+            <commandName>Form.Command.ОбновитьИзПалитры</commandName>
+            <representation>Auto</representation>
+            <autoMaxWidth>true</autoMaxWidth>
+            <autoMaxHeight>true</autoMaxHeight>
+            <placementArea>UserCmds</placementArea>
+            <representationInContextMenu>Auto</representationInContextMenu>
+          </items>
           <items xsi:type="form:FormField">
             <name>ОбъектИмяМодуля</name>
             <id>219</id>
@@ -4133,6 +4164,23 @@
       </handler>
     </action>
     <representation>Picture</representation>
+    <currentRowUse>Auto</currentRowUse>
+  </formCommands>
+  <formCommands>
+    <name>ОбновитьИзПалитры</name>
+    <title>
+      <key>ru</key>
+      <value>Обновить из палитры</value>
+    </title>
+    <id>7</id>
+    <use>
+      <common>true</common>
+    </use>
+    <action xsi:type="form:FormCommandHandlerContainer">
+      <handler>
+        <name>ОбновитьИзПалитры</name>
+      </handler>
+    </action>
     <currentRowUse>Auto</currentRowUse>
   </formCommands>
   <commandInterface>
