--- a/FormCodeGenerator/src/ExternalDataProcessors/FormGenerator/Forms/ФормаКодогенерации/Form.form
+++ b/FormCodeGenerator/src/ExternalDataProcessors/FormGenerator/Forms/ФормаКодогенерации/Form.form
@@ -3799,6 +3799,9 @@
     <settingsSavedData xsi:type="form:DataPath">
       <segments>Объект.ТекстШаблонаОкружения</segments>
     </settingsSavedData>
+    <settingsSavedData xsi:type="form:DataPath">
+      <segments>Объект.ИмяМодуля</segments>
+    </settingsSavedData>
     <additionalColumns>
       <tablePath xsi:type="form:DataPath">
         <segments>Объект.ДеревоРеквизитов</segments>
